2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Browse all files when selecting
	HTML and text viewer applications under Linux.

2008-12-12  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configtooldoc.cpp: Provide additional default state
	for a new test platform.

2008-12-09  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/runtestsdlg.cpp: Reduce initial/minimum size of the
	wxNotebook widget to allow initial display of borders and buttons.

	* standalone/wxwin/outputwin.cpp, standalone/wxwin/outputwin.h:
	Manipulate state of "Clear" context menu item. Fix from Spencer Oliver.

2008-12-08  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/mainwin.cpp: Make menu acceleration keys unique.
	[ Bugzilla 1000618 ]

2008-09-03  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Observe item/macro name setting
	when updating tree items.
	* standalone/wxwin/docsystem.cpp: Tweak naming of root node in
	documentation tree.
	* standalone/wxwin/configtool.cpp: Search for the eCos repository if
	the saved location no-longer exists. [ Bugzilla 1000465 ]
 
2008-08-15  Bart Veer  <bartv@ecoscentric.com>

	* common/common/build.cxx: avoid compiler warning.

2008-08-13  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Fix assert on ecDoubleEditorCtrl
	option type. Initialise wxSpinCtrl with valid integer value. Do not
	end editing when clicking within value window.
	
	* standalone/wxwin/configtool.cpp: Move Tcl and wxMenu initialisation
	from class contructor to OnInit() method for compatibility with recent
	wxWidgets. Tweak host tool directory path calculation for compatibility
	with recent wxWidgets under Cygwin.
	
	* standalone/wxwin/configtooldoc.cpp: Suppress copying of MLT files.
	
	* standalone/wxwin/configtree.cpp: Always end editing when clicking
	elsewhere in the value window.
	
	* standalone/wxwin/configtree.cpp, standalone/wxwin/configtree.h: Do